Fix overflow button

--- a/public/css/session.css
+++ b/public/css/session.css
@@ -20,6 +20,10 @@ thead {
 	user-select: all;
 }
 
+.col1, .col2, .col3, .col4, .col5 {
+	max-width: fit-content;
+}
+
 .col5 {
 	display: flex;
 	overflow: visible;
